src/ir/auth_logic/parser/AuthLogicParser.cpp

// Generated from /usr/local/google/home/harshamandadi/.cache/bazel/_bazel_harshamandadi/f409c9ae133702a7ffaea49f1813009b/sandbox/linux-sandbox/1/execroot/__main__/src/ir/auth_logic/auth_FE/AuthLogic.g4 by ANTLR 4.8


#include "AuthLogicListener.h"
#include "AuthLogicVisitor.h"

#include "AuthLogicParser.h"


using namespace antlrcpp;
using namespace antlr4;

AuthLogicParser::AuthLogicParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

AuthLogicParser::~AuthLogicParser() {
  delete _interpreter;
}

std::string AuthLogicParser::getGrammarFileName() const {
  return "AuthLogic.g4";
}

const std::vector<std::string>& AuthLogicParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& AuthLogicParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- PrincipalContext ------------------------------------------------------------------

AuthLogicParser::PrincipalContext::PrincipalContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* AuthLogicParser::PrincipalContext::ID() {
  return getToken(AuthLogicParser::ID, 0);
}


size_t AuthLogicParser::PrincipalContext::getRuleIndex() const {
  return AuthLogicParser::RulePrincipal;
}

void AuthLogicParser::PrincipalContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AuthLogicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPrincipal(this);
}

void AuthLogicParser::PrincipalContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AuthLogicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPrincipal(this);
}


antlrcpp::Any AuthLogicParser::PrincipalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AuthLogicVisitor*>(visitor))
    return parserVisitor->visitPrincipal(this);
  else
    return visitor->visitChildren(this);
}

AuthLogicParser::PrincipalContext* AuthLogicParser::principal() {
  PrincipalContext *_localctx = _tracker.createInstance<PrincipalContext>(_ctx, getState());
  enterRule(_localctx, 0, AuthLogicParser::RulePrincipal);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(22);
    match(AuthLogicParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PredicateContext ------------------------------------------------------------------

AuthLogicParser::PredicateContext::PredicateContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> AuthLogicParser::PredicateContext::ID() {
  return getTokens(AuthLogicParser::ID);
}

tree::TerminalNode* AuthLogicParser::PredicateContext::ID(size_t i) {
  return getToken(AuthLogicParser::ID, i);
}

tree::TerminalNode* AuthLogicParser::PredicateContext::NEG() {
  return getToken(AuthLogicParser::NEG, 0);
}


size_t AuthLogicParser::PredicateContext::getRuleIndex() const {
  return AuthLogicParser::RulePredicate;
}

void AuthLogicParser::PredicateContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AuthLogicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPredicate(this);
}

void AuthLogicParser::PredicateContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AuthLogicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPredicate(this);
}


antlrcpp::Any AuthLogicParser::PredicateContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AuthLogicVisitor*>(visitor))
    return parserVisitor->visitPredicate(this);
  else
    return visitor->visitChildren(this);
}

AuthLogicParser::PredicateContext* AuthLogicParser::predicate() {
  PredicateContext *_localctx = _tracker.createInstance<PredicateContext>(_ctx, getState());
  enterRule(_localctx, 2, AuthLogicParser::RulePredicate);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(25);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == AuthLogicParser::NEG) {
      setState(24);
      match(AuthLogicParser::NEG);
    }
    setState(27);
    match(AuthLogicParser::ID);
    setState(28);
    match(AuthLogicParser::T__0);
    setState(29);
    match(AuthLogicParser::ID);
    setState(34);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == AuthLogicParser::T__1) {
      setState(30);
      match(AuthLogicParser::T__1);
      setState(31);
      match(AuthLogicParser::ID);
      setState(36);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(37);
    match(AuthLogicParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VerbphraseContext ------------------------------------------------------------------

AuthLogicParser::VerbphraseContext::VerbphraseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t AuthLogicParser::VerbphraseContext::getRuleIndex() const {
  return AuthLogicParser::RuleVerbphrase;
}

void AuthLogicParser::VerbphraseContext::copyFrom(VerbphraseContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- PredphraseContext ------------------------------------------------------------------

AuthLogicParser::PredicateContext* AuthLogicParser::PredphraseContext::predicate() {
  return getRuleContext<AuthLogicParser::PredicateContext>(0);
}

AuthLogicParser::PredphraseContext::PredphraseContext(VerbphraseContext *ctx) { copyFrom(ctx); }

void AuthLogicParser::PredphraseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AuthLogicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPredphrase(this);
}
void AuthLogicParser::PredphraseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AuthLogicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPredphrase(this);
}

antlrcpp::Any AuthLogicParser::PredphraseContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AuthLogicVisitor*>(visitor))
    return parserVisitor->visitPredphrase(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ActsAsPhraseContext ------------------------------------------------------------------

tree::TerminalNode* AuthLogicParser::ActsAsPhraseContext::CANACTAS() {
  return getToken(AuthLogicParser::CANACTAS, 0);
}

AuthLogicParser::PrincipalContext* AuthLogicParser::ActsAsPhraseContext::principal() {
  return getRuleContext<AuthLogicParser::PrincipalContext>(0);
}

AuthLogicParser::ActsAsPhraseContext::ActsAsPhraseContext(VerbphraseContext *ctx) { copyFrom(ctx); }

void AuthLogicParser::ActsAsPhraseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AuthLogicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterActsAsPhrase(this);
}
void AuthLogicParser::ActsAsPhraseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AuthLogicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitActsAsPhrase(this);
}

antlrcpp::Any AuthLogicParser::ActsAsPhraseContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AuthLogicVisitor*>(visitor))
    return parserVisitor->visitActsAsPhrase(this);
  else
    return visitor->visitChildren(this);
}
AuthLogicParser::VerbphraseContext* AuthLogicParser::verbphrase() {
  VerbphraseContext *_localctx = _tracker.createInstance<VerbphraseContext>(_ctx, getState());
  enterRule(_localctx, 4, AuthLogicParser::RuleVerbphrase);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(42);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case AuthLogicParser::ID:
      case AuthLogicParser::NEG: {
        _localctx = dynamic_cast<VerbphraseContext *>(_tracker.createInstance<AuthLogicParser::PredphraseContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(39);
        predicate();
        break;
      }

      case AuthLogicParser::CANACTAS: {
        _localctx = dynamic_cast<VerbphraseContext *>(_tracker.createInstance<AuthLogicParser::ActsAsPhraseContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(40);
        match(AuthLogicParser::CANACTAS);
        setState(41);
        principal();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FlatFactContext ------------------------------------------------------------------

AuthLogicParser::FlatFactContext::FlatFactContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t AuthLogicParser::FlatFactContext::getRuleIndex() const {
  return AuthLogicParser::RuleFlatFact;
}

void AuthLogicParser::FlatFactContext::copyFrom(FlatFactContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- PrinFactContext ------------------------------------------------------------------

AuthLogicParser::PrincipalContext* AuthLogicParser::PrinFactContext::principal() {
  return getRuleContext<AuthLogicParser::PrincipalContext>(0);
}

AuthLogicParser::VerbphraseContext* AuthLogicParser::PrinFactContext::verbphrase() {
  return getRuleContext<AuthLogicParser::VerbphraseContext>(0);
}

AuthLogicParser::PrinFactContext::PrinFactContext(FlatFactContext *ctx) { copyFrom(ctx); }

void AuthLogicParser::PrinFactContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AuthLogicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPrinFact(this);
}
void AuthLogicParser::PrinFactContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AuthLogicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPrinFact(this);
}

antlrcpp::Any AuthLogicParser::PrinFactContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AuthLogicVisitor*>(visitor))
    return parserVisitor->visitPrinFact(this);
  else
    return visitor->visitChildren(this);
}
//----------------- PredFactContext ------------------------------------------------------------------

AuthLogicParser::PredicateContext* AuthLogicParser::PredFactContext::predicate() {
  return getRuleContext<AuthLogicParser::PredicateContext>(0);
}

AuthLogicParser::PredFactContext::PredFactContext(FlatFactContext *ctx) { copyFrom(ctx); }

void AuthLogicParser::PredFactContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AuthLogicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPredFact(this);
}
void AuthLogicParser::PredFactContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AuthLogicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPredFact(this);
}

antlrcpp::Any AuthLogicParser::PredFactContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AuthLogicVisitor*>(visitor))
    return parserVisitor->visitPredFact(this);
  else
    return visitor->visitChildren(this);
}
AuthLogicParser::FlatFactContext* AuthLogicParser::flatFact() {
  FlatFactContext *_localctx = _tracker.createInstance<FlatFactContext>(_ctx, getState());
  enterRule(_localctx, 6, AuthLogicParser::RuleFlatFact);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(48);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<FlatFactContext *>(_tracker.createInstance<AuthLogicParser::PrinFactContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(44);
      principal();
      setState(45);
      verbphrase();
      break;
    }

    case 2: {
      _localctx = dynamic_cast<FlatFactContext *>(_tracker.createInstance<AuthLogicParser::PredFactContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(47);
      predicate();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FactContext ------------------------------------------------------------------

AuthLogicParser::FactContext::FactContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t AuthLogicParser::FactContext::getRuleIndex() const {
  return AuthLogicParser::RuleFact;
}

void AuthLogicParser::FactContext::copyFrom(FactContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- FlatFactFactContext ------------------------------------------------------------------

AuthLogicParser::FlatFactContext* AuthLogicParser::FlatFactFactContext::flatFact() {
  return getRuleContext<AuthLogicParser::FlatFactContext>(0);
}

AuthLogicParser::FlatFactFactContext::FlatFactFactContext(FactContext *ctx) { copyFrom(ctx); }

void AuthLogicParser::FlatFactFactContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AuthLogicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFlatFactFact(this);
}
void AuthLogicParser::FlatFactFactContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AuthLogicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFlatFactFact(this);
}

antlrcpp::Any AuthLogicParser::FlatFactFactContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AuthLogicVisitor*>(visitor))
    return parserVisitor->visitFlatFactFact(this);
  else
    return visitor->visitChildren(this);
}
//----------------- CanSayFactContext ------------------------------------------------------------------

AuthLogicParser::PrincipalContext* AuthLogicParser::CanSayFactContext::principal() {
  return getRuleContext<AuthLogicParser::PrincipalContext>(0);
}

tree::TerminalNode* AuthLogicParser::CanSayFactContext::CANSAY() {
  return getToken(AuthLogicParser::CANSAY, 0);
}

AuthLogicParser::FactContext* AuthLogicParser::CanSayFactContext::fact() {
  return getRuleContext<AuthLogicParser::FactContext>(0);
}

AuthLogicParser::CanSayFactContext::CanSayFactContext(FactContext *ctx) { copyFrom(ctx); }

void AuthLogicParser::CanSayFactContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AuthLogicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCanSayFact(this);
}
void AuthLogicParser::CanSayFactContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AuthLogicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCanSayFact(this);
}

antlrcpp::Any AuthLogicParser::CanSayFactContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AuthLogicVisitor*>(visitor))
    return parserVisitor->visitCanSayFact(this);
  else
    return visitor->visitChildren(this);
}
AuthLogicParser::FactContext* AuthLogicParser::fact() {
  FactContext *_localctx = _tracker.createInstance<FactContext>(_ctx, getState());
  enterRule(_localctx, 8, AuthLogicParser::RuleFact);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(55);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<FactContext *>(_tracker.createInstance<AuthLogicParser::FlatFactFactContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(50);
      flatFact();
      break;
    }

    case 2: {
      _localctx = dynamic_cast<FactContext *>(_tracker.createInstance<AuthLogicParser::CanSayFactContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(51);
      principal();
      setState(52);
      match(AuthLogicParser::CANSAY);
      setState(53);
      fact();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssertionContext ------------------------------------------------------------------

AuthLogicParser::AssertionContext::AssertionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t AuthLogicParser::AssertionContext::getRuleIndex() const {
  return AuthLogicParser::RuleAssertion;
}

void AuthLogicParser::AssertionContext::copyFrom(AssertionContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- FactAssertionContext ------------------------------------------------------------------

AuthLogicParser::FactContext* AuthLogicParser::FactAssertionContext::fact() {
  return getRuleContext<AuthLogicParser::FactContext>(0);
}

AuthLogicParser::FactAssertionContext::FactAssertionContext(AssertionContext *ctx) { copyFrom(ctx); }

void AuthLogicParser::FactAssertionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AuthLogicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFactAssertion(this);
}
void AuthLogicParser::FactAssertionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AuthLogicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFactAssertion(this);
}

antlrcpp::Any AuthLogicParser::FactAssertionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AuthLogicVisitor*>(visitor))
    return parserVisitor->visitFactAssertion(this);
  else
    return visitor->visitChildren(this);
}
//----------------- HornClauseAssertionContext ------------------------------------------------------------------

AuthLogicParser::FactContext* AuthLogicParser::HornClauseAssertionContext::fact() {
  return getRuleContext<AuthLogicParser::FactContext>(0);
}

std::vector<AuthLogicParser::FlatFactContext *> AuthLogicParser::HornClauseAssertionContext::flatFact() {
  return getRuleContexts<AuthLogicParser::FlatFactContext>();
}

AuthLogicParser::FlatFactContext* AuthLogicParser::HornClauseAssertionContext::flatFact(size_t i) {
  return getRuleContext<AuthLogicParser::FlatFactContext>(i);
}

AuthLogicParser::HornClauseAssertionContext::HornClauseAssertionContext(AssertionContext *ctx) { copyFrom(ctx); }

void AuthLogicParser::HornClauseAssertionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AuthLogicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterHornClauseAssertion(this);
}
void AuthLogicParser::HornClauseAssertionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AuthLogicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitHornClauseAssertion(this);
}

antlrcpp::Any AuthLogicParser::HornClauseAssertionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AuthLogicVisitor*>(visitor))
    return parserVisitor->visitHornClauseAssertion(this);
  else
    return visitor->visitChildren(this);
}
AuthLogicParser::AssertionContext* AuthLogicParser::assertion() {
  AssertionContext *_localctx = _tracker.createInstance<AssertionContext>(_ctx, getState());
  enterRule(_localctx, 10, AuthLogicParser::RuleAssertion);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(72);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<AssertionContext *>(_tracker.createInstance<AuthLogicParser::FactAssertionContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(57);
      fact();
      setState(58);
      match(AuthLogicParser::T__3);
      break;
    }

    case 2: {
      _localctx = dynamic_cast<AssertionContext *>(_tracker.createInstance<AuthLogicParser::HornClauseAssertionContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(60);
      fact();
      setState(61);
      match(AuthLogicParser::T__4);
      setState(62);
      flatFact();
      setState(67);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == AuthLogicParser::T__1) {
        setState(63);
        match(AuthLogicParser::T__1);
        setState(64);
        flatFact();
        setState(69);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(70);
      match(AuthLogicParser::T__3);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SaysAssertionContext ------------------------------------------------------------------

AuthLogicParser::SaysAssertionContext::SaysAssertionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t AuthLogicParser::SaysAssertionContext::getRuleIndex() const {
  return AuthLogicParser::RuleSaysAssertion;
}

void AuthLogicParser::SaysAssertionContext::copyFrom(SaysAssertionContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- SaysMultiContext ------------------------------------------------------------------

AuthLogicParser::PrincipalContext* AuthLogicParser::SaysMultiContext::principal() {
  return getRuleContext<AuthLogicParser::PrincipalContext>(0);
}

tree::TerminalNode* AuthLogicParser::SaysMultiContext::SAYS() {
  return getToken(AuthLogicParser::SAYS, 0);
}

std::vector<AuthLogicParser::AssertionContext *> AuthLogicParser::SaysMultiContext::assertion() {
  return getRuleContexts<AuthLogicParser::AssertionContext>();
}

AuthLogicParser::AssertionContext* AuthLogicParser::SaysMultiContext::assertion(size_t i) {
  return getRuleContext<AuthLogicParser::AssertionContext>(i);
}

tree::TerminalNode* AuthLogicParser::SaysMultiContext::EXPORT() {
  return getToken(AuthLogicParser::EXPORT, 0);
}

tree::TerminalNode* AuthLogicParser::SaysMultiContext::ID() {
  return getToken(AuthLogicParser::ID, 0);
}

AuthLogicParser::SaysMultiContext::SaysMultiContext(SaysAssertionContext *ctx) { copyFrom(ctx); }

void AuthLogicParser::SaysMultiContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AuthLogicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSaysMulti(this);
}
void AuthLogicParser::SaysMultiContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AuthLogicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSaysMulti(this);
}

antlrcpp::Any AuthLogicParser::SaysMultiContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AuthLogicVisitor*>(visitor))
    return parserVisitor->visitSaysMulti(this);
  else
    return visitor->visitChildren(this);
}
//----------------- SaysSingleContext ------------------------------------------------------------------

AuthLogicParser::PrincipalContext* AuthLogicParser::SaysSingleContext::principal() {
  return getRuleContext<AuthLogicParser::PrincipalContext>(0);
}

tree::TerminalNode* AuthLogicParser::SaysSingleContext::SAYS() {
  return getToken(AuthLogicParser::SAYS, 0);
}

AuthLogicParser::AssertionContext* AuthLogicParser::SaysSingleContext::assertion() {
  return getRuleContext<AuthLogicParser::AssertionContext>(0);
}

tree::TerminalNode* AuthLogicParser::SaysSingleContext::EXPORT() {
  return getToken(AuthLogicParser::EXPORT, 0);
}

tree::TerminalNode* AuthLogicParser::SaysSingleContext::ID() {
  return getToken(AuthLogicParser::ID, 0);
}

AuthLogicParser::SaysSingleContext::SaysSingleContext(SaysAssertionContext *ctx) { copyFrom(ctx); }

void AuthLogicParser::SaysSingleContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AuthLogicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSaysSingle(this);
}
void AuthLogicParser::SaysSingleContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AuthLogicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSaysSingle(this);
}

antlrcpp::Any AuthLogicParser::SaysSingleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AuthLogicVisitor*>(visitor))
    return parserVisitor->visitSaysSingle(this);
  else
    return visitor->visitChildren(this);
}
AuthLogicParser::SaysAssertionContext* AuthLogicParser::saysAssertion() {
  SaysAssertionContext *_localctx = _tracker.createInstance<SaysAssertionContext>(_ctx, getState());
  enterRule(_localctx, 12, AuthLogicParser::RuleSaysAssertion);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(94);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<SaysAssertionContext *>(_tracker.createInstance<AuthLogicParser::SaysSingleContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(74);
      principal();
      setState(75);
      match(AuthLogicParser::SAYS);
      setState(76);
      assertion();
      setState(79);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == AuthLogicParser::EXPORT) {
        setState(77);
        match(AuthLogicParser::EXPORT);
        setState(78);
        match(AuthLogicParser::ID);
      }
      break;
    }

    case 2: {
      _localctx = dynamic_cast<SaysAssertionContext *>(_tracker.createInstance<AuthLogicParser::SaysMultiContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(81);
      principal();
      setState(82);
      match(AuthLogicParser::SAYS);
      setState(83);
      match(AuthLogicParser::T__5);
      setState(85); 
      _errHandler->sync(this);
      _la = _input->LA(1);
      do {
        setState(84);
        assertion();
        setState(87); 
        _errHandler->sync(this);
        _la = _input->LA(1);
      } while (_la == AuthLogicParser::ID

      || _la == AuthLogicParser::NEG);
      setState(89);
      match(AuthLogicParser::T__6);
      setState(92);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == AuthLogicParser::EXPORT) {
        setState(90);
        match(AuthLogicParser::EXPORT);
        setState(91);
        match(AuthLogicParser::ID);
      }
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- KeyBindContext ------------------------------------------------------------------

AuthLogicParser::KeyBindContext::KeyBindContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t AuthLogicParser::KeyBindContext::getRuleIndex() const {
  return AuthLogicParser::RuleKeyBind;
}

void AuthLogicParser::KeyBindContext::copyFrom(KeyBindContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- BindprivContext ------------------------------------------------------------------

tree::TerminalNode* AuthLogicParser::BindprivContext::BINDEX() {
  return getToken(AuthLogicParser::BINDEX, 0);
}

AuthLogicParser::PrincipalContext* AuthLogicParser::BindprivContext::principal() {
  return getRuleContext<AuthLogicParser::PrincipalContext>(0);
}

tree::TerminalNode* AuthLogicParser::BindprivContext::ID() {
  return getToken(AuthLogicParser::ID, 0);
}
